fix alignment of title on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -69,7 +69,7 @@
 
 @media (max-width: 770px) {
   #hello {
-    margin-left: 0;
+    margin-left: -5px;;
     font-size: 60px;
     top: 0;
   }
